<resources>
    <string name="app_name">TourGuideApp</string>
    <string name="drawer_game_park">Game Parks</string>
    <string name="drawer_cultural_site">Cultural Sites</string>
    <string name="drawer_dish">Dishes</string>
    <string name="drawer_popular_place">Popular Places</string>
    <string name="drawer_share">Share</string>
    <string name="drawer_send">Send</string>
    <string name="drawer_communicate">Communicate</string>
    <string name="author_email">contact@stevenmwesigwa.com</string>
    <!--    Logo Image Content Description-->
    <string name="app_image_description">Tour Guide App Image / Logo</string>
    <!--For accessibility purposes i.e the blind, screen readers-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="tourist_attraction_img">Tourist Attraction Image</string>
    <string name="tourist_place_title">Kidepo game park</string>
    <string name="tourist_place_description">Nestled in the wild frontier region of Uganda,
        Kidepo Valley National Park is apparently the most isolated national park in Uganda but still stands out to be one of the best virgin places every wildlife viewer can ever visit in Uganda. This virgin national park is undoubtedly among the best wilderness areas in Africa, harboring a couple of extinct species of wildlife that can\'t be found in any other Ugandan national park. Kidepo is right at the core of a Savannah landscape right next to a few mountainous bodies. </string>
    <string name="home_details_title">Kidepo national game park</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
