<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <!--    android:checkableBehavior="single" - makes sure that you can only select-->
    <!--    one menu item at a time-->
    <!--    Item stays selected-->
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_message"
            android:icon="@drawable/ic_message"
            android:title="@string/drawer_game_park" />
        <item
            android:id="@+id/nav_cultural_site"
            android:icon="@drawable/ic_chat"
            android:title="@string/drawer_cultural_site" />
    </group>

    <!--    these won't stay selected when we choose them but-->
    <!--    they will just trigger an action-->
    <item android:title="@string/drawer_communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share"
                android:title="@string/drawer_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_send"
                android:title="@string/drawer_send" />
        </menu>
    </item>

</menu>