<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".fragments.TouristAttractionItemDetailsFragment">

        <TextView
            android:id="@+id/HomeDetailsTitle"
            style="@style/home_item_details_text_styles"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text="@string/home_details_title" />

        <ImageView
            android:id="@+id/HomeDetailsImage"
            android:layout_width="@dimen/home_details_image_width"
            android:layout_height="@dimen/home_details_image_height"
            android:layout_below="@id/HomeDetailsTitle"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/tourist_attraction_img"
            tools:src="@drawable/ic_profile" />


        <TextView
            android:id="@+id/HomeDetailsDescription"
            style="@style/home_item_details_text_styles"
            android:layout_below="@id/HomeDetailsImage"
            android:layout_marginBottom="4dp"
            android:paddingStart="@dimen/home_details_description_padding_left"
            android:paddingEnd="@dimen/home_details_description_padding_right"
            android:paddingBottom="@dimen/home_details_description_padding_bottom"
            android:textSize="18sp"
            tools:text="@string/tourist_place_description" />

    </RelativeLayout>

</ScrollView>
